dark mode fixes and address book page improvements

--- a/src/app/components/representatives/representatives.component.css
+++ b/src/app/components/representatives/representatives.component.css
@@ -6,10 +6,6 @@
 	vertical-align: 2px;
 }
 
-.uk-pagination > li > a {
-	padding: 5px 10px;
-}
-
 .representative-health-column-header, .representative-health-column {
 	min-width: 120px;
 }
@@ -86,19 +82,6 @@
 
 .representative-row {
 	border-bottom: none !important;
-}
-
-.delegating-account-row {
-	border-top: none !important;
-	border-bottom: none !important;
-}
-
-.delegating-account-row + .representative-row {
-	border-top: 1px solid #DCE9F9 !important;
-}
-
-.delegating-account-row:last-child {
-	border-bottom: 1px solid #DCE9F9 !important;
 }
 
 .delegating-account-row > td {
